add generic websocket support, update state and data in websockets :)
